<resources>
    <string name="app_name">Geo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="auth_image">TODO</string>
    <string name="next">Next</string>
    <string name="context_image">Context Image</string>
    <string name="no_answer_given">Choose an answer</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="app_logo">App Logo</string>
    <string name="final_score">Final Score</string>
    <string name="logout">Logout</string>
    <string name="try_again">Try Again</string>
    <string name="decide_your_fate">Decide your fate</string>
    <string name="taiwan">Is Taiwan a country?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lord_and_savior">Lord and savior</string>
    <string name="mandarin">年殺死了墜機事故</string>
    <string name="execution_date">Your execution is scheduled for tomorrow.</string>

    <integer name="max_questions">5</integer>
</resources>